module/Mrss/public/css/custom-report.css
.complete-chart-box {
    margin: 0px 20px 20px 0px;
    width: 500px;
    height: 420px;
    padding:  10px 0;
    float: left;
}

.complete-chart-box.full-width {
    width: 1040px;
    height: 640px;
}

.complete-chart-box.full-width.report-text-wrapper {
    width: 1040px;
    height: auto !important;
}

.complete-chart-box.full-width.report-text-wrapper .custom-report-text {
    min-height: 30px !important;
}

/* Custom reports */
.customReport p.reportDescription {
    margin-left: 20px;
    font-style: italic;
}
.customReportList h2 {
    margin: 20px 20px 15px 0;
}

span.smallNote {
    padding-left: 20px;
    color: #AAA;
    font-size: 80%;
}

.custom-report-text {
    min-height: 390px;
}

.full-width .custom-report-text {

}

.custom-report-text h1 {
    border-bottom: none;
}

#text-editor {
    width: 500px;
}

.custom-report-text {
    padding-left: 30px;
}

.custom-report-footnotes h2 {
    margin-top: 15px;
}

.custom-report-footnotes h4 {
    margin-top: 15px;
    margin-bottom: 5px;
}

.custom-report-footnotes p {
    font-size: 92%;
    margin: 0 0 8px 0;
    line-height: 124%;
    color: #666;
}

.help-block {
    font-size: 70%;
    margin-left: 5px;
}



body .explore .form-horizontal .control-label {
    text-align: left;
}
body .explore .form-horizontal .controls {
    margin-left: 5px;
}
.explore form input:not([type=checkbox]):not([type=submit]), .explore form textarea {
    width: 90%
}
.explore form input {
    clear: both;
}

.explore .form-horizontal .control-label {
    width: 90%;
    text-align: center;
}

.explore .controls {
    /*clear: both;*/
}
select {
    width: 80%;
}

#control-group-submitButton, #control-group-previewButton, #control-group-cancelButton {
    width: 27%;
    float: right;
    margin-left: 1px;
}

#control-group-cancelButton label {
    display: none;
}

/*#control-group-regression,*/ #control-group-content {
                                   display: none;
                               }

.report-item-preview {
    width: 500px;
    padding-left: 20px;
}
.reportItems {
    width: 1140px;
}

#controls-percentiles, #controls-colleges {
    margin: 30px 10px 0 45px;
}
#controls-percentiles label input {
    border-top-color: red !important;
}

